--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,71 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display:flex;
+  align-items: center;
+  justify-content: center;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.ipod {
+  width: 280px;
+  height: 500px;
+  border-radius: 30px;
+  background-color: #d3d3d3;
+  border-radius: 30px;
+  box-shadow: 0 0 10px rgba(193, 193, 193, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  -webkit-box-reflect:below 2px linear-gradient(to bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.3))
+}
+
+
+
+
+.button {
+  width: 30px;
+  height: 30px;
+  background-color: #666;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.control{
+  color: grey;
+  font-weight: 900;
+  position: absolute;
+}
+#menu{
+  left:38%;
+  top:10%;
+}
+#forward{
+  right:5%;
+  top:40%;
+}
+#forward-pause{
+  right:45%;
+  bottom:10%;
+}
+#backward{
+  left:5%;
+  top:40%
+}
+.circle{
+  width: 80px;
+  height:80px;
+  border-radius: 50%;
+  background-color: grey;
+  position: absolute;
+  top:30%;
+  right:30%;
 }
